2001-10-29  Wolfgang Sourdeau  <wolfgang@iscream.ca>

	* src/ps_print.c (create_temp_print_file): create file with umask=077.
	(create_temp_print_file): free template pattern from memory.

2001-10-12  Wolfgang Sourdeau  <wolfgang@contre.com>

	* configure.in: fixed problem with the gnome version detection
	script.

2001-10-05  Wolfgang Sourdeau  <wolfgang@contre.com>

	* src/errors.c: Adapted to the new GhfwDlgWindow widget.

	* src/ps_print.c: Adapted to the new GhfwDlgWindow and
	GhfwProgressWindow widgets.

	* src/gn_print.c: Adapted to the new GhfwDlgWindow and
	GhfwProgressWindow widgets.

2001-07-26  Wolfgang Sourdeau  <wolfgang@contre.com>

	* src/dialog_window.c: new file containing all the dialog_window_*
	functions from gtkutils.c (for further move in the libghfaxwidgets
	library)

2001-07-25  Wolfgang Sourdeau  <wolfgang@contre.com>

	* src/urlzone.c: new utility, add URL links to pixmap widgets.

2001-05-28  Wolfgang Sourdeau  <wolfgang@contre.com>

	* src/thumblayout.c (usr_btn_state_changed_cb): insensitive
	buttons don't prevent the layout to be scrolled with the mouse
	wheel anymore. The trick is to deactivate the button_press event
	catching when the widget is insensitive and do the reverse when it
	is sensitive.

2001-05-21  Wolfgang Sourdeau  <wolfgang@contre.com>

	* src/thumblayout.c (mouse_scroll_event_cb): added support for
	mouse-wheel in Win32.
	(mouse_press_event_cb): added support for mouse-wheel in GNU.

2001-05-20  Wolfgang Sourdeau  <wolfgang@contre.com>

	* src/thumblayout.c: new file along with thumblayout.h. It creates
	a pseudo widget with a scrolling container for the thumbnails.
	Written to be "portable" to other projects. GAL has a similar
	widget, but since I want to keep compatibility with GTK+...

2001-05-15  Wolfgang Sourdeau  <wolfgang@contre.com>

	* src/callbcks.c (close_file_cb): this function was moved from
	fileopen.c to here.

	* src/fileopen.c (file_dlg_ok_cb): file_name was never freed.