@@ -41,7 +41,7 @@ noinst_HEADERS = setup.h tiffimages.h tiffinfo.h viewer.h cursors.h print.h \
 		 callbcks.h draw_page.h zoom.h $(NOPRINTSRC)
 
 ghfaxviewer_SOURCES = setup.c fileopen.c cursors.c draw_page.c \
-		 thumbnails.c \
+		 thumbnails.c prefs.c \
 		 tiffimages.c tiffinfo.c zoom.c viewer.c callbcks.c toolbar.c \
 		 menu.c about.c errors.c info.c \
 		 $(PRINTSRC) $(RCSRC)
