@@ -1,0 +1,102 @@
+/* XPM */
+static char * printer_prefs_xpm[] = {
+"48 48 51 1",
+" 	c None",
+".	c #D3D3D3",
+"+	c #EFEFEF",
+"@	c #EFEFED",
+"#	c #EEEEEA",
+"$	c #EDEDE8",
+"%	c #EDECE6",
+"&	c #ECEBE3",
+"*	c #EBE9E0",
+"=	c #EBE8DE",
+"-	c #EAE7DC",
+";	c #E9E7D9",
+">	c #E8E6D7",
+",	c #E8E5D4",
+"'	c #E7E4D1",
+")	c #E6E3CF",
+"!	c #E6E2CD",
+"~	c #E5E1CA",
+"{	c #E4DFC7",
+"]	c #E4DFC5",
+"^	c #E3DEC3",
+"/	c #E2DDC0",
+"(	c #E1DCBE",
+"_	c #EFEFEE",
+":	c #D5D5D5",
+"<	c #ECEAE2",
+"[	c #EBE9DF",
+"}	c #EAE8DD",
+"|	c #EAE7DA",
+"1	c #E9E6D8",
+"2	c #E8E5D5",
+"3	c #E7E4D3",
+"4	c #E7E3D0",
+"5	c #E6E2CE",
+"6	c #E5E1CB",
+"7	c #E5E0C9",
+"8	c #E4DFC6",
+"9	c #E3DEC4",
+"0	c #E3DDC1",
+"a	c #E2DCBF",
+"b	c #AEAEAE",
+"c	c #DDDDDD",
+"d	c #ECEBE4",
+"e	c #B6B6B6",
+"f	c #EEEEEC",
+"g	c #EEEDE9",
+"h	c #EDECE7",
+"i	c #000000",
+"j	c #FFFFFF",
+"k	c #4D4D4D",
+"l	c #838383",
+"                                                ",
+"                                                ",
+"                                                ",
+"                                                ",
+"                                                ",
+"                                                ",
+"                                                ",
+"         ..............................         ",
+"         .+@#$%&*=-;>,')!~{]^/((((((((.         ",
+"         .+_::::<[}|1234567890a(((((((.         ",
+"         .++:bc:&*=-;>,')!~{]^/(((((((.         ",
+"         .++::::d<[}|1234567890a((((((.         ",
+"         .+++@#$%&*=-;>,')!~{]^/((((((.         ",
+"         .++eefghd<[}|1234567890a(((((.         ",
+"         .++ee@ee%e*e-;e:ee!~e]e/e((e(.         ",
+"         .++++_fghd<[}|1234567890a((((.         ",
+"     iiii.+++++@#$%&*=-;>,')!~{]^/(:e(.iiii     ",
+"     ijjj.++ee+eege:<e}|eee:56e8eee:((.jjji     ",
+"     ijjj.++++++@#$%&*=-;>,')!~{]^/(((.jjji     ",
+"     ijjj.++e+eeefeee<ee|e23ee6e8eeee(.jjji     ",
+"     ijjj.+++++++@#$%&*=-;>,')!~{]^/((.jjji     ",
+"     ijjj.++eeeeee:geee:}eee:eee:eeee(.jjji     ",
+"     ijjj.++++++++@#$%&*=-;>,')!~{]^/(.jjji     ",
+"     ijjj.++e+e:ee_eeeeeeee:2eeeeeee:a.jjjikk   ",
+"     ijjj.+++++++++@#$%&*=-;>,')!~{]^/.jjji k   ",
+"     ijjj.+++++++++_fghd<[}|1234567890.jjji k   ",
+"     ijjlllllllllllllllllllllllllllllllljji k   ",
+"     ijjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjji k   ",
+"     ijjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjji k   ",
+"     ijjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjikk   ",
+"     ijjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjji     ",
+"     ijjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjji     ",
+"     ijjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjji     ",
+"     ijjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjji     ",
+"     ijjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjji     ",
+"     ijjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjji     ",
+"     iiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiii     ",
+"                                                ",
+"                                                ",
+"                                                ",
+"                                                ",
+"                                                ",
+"                                                ",
+"                                                ",
+"                                                ",
+"                                                ",
+"                                                ",
+"                                                "};
