@@ -1,0 +1,177 @@
+/* XPM */
+static char * viewer_prefs_xpm[] = {
+"48 48 126 2",
+"  	c None",
+". 	c #999AB7",
+"+ 	c #9293B2",
+"@ 	c #8E8FAF",
+"# 	c #8F90AF",
+"$ 	c #8F8FBA",
+"% 	c #8582F1",
+"& 	c #8581FC",
+"* 	c #8783FC",
+"= 	c #8683EA",
+"- 	c #9090C3",
+"; 	c #9192B1",
+"> 	c #B1B1C7",
+", 	c #9F9CF6",
+"' 	c #8581FB",
+") 	c #8B87FC",
+"! 	c #8E8AFB",
+"~ 	c #908CFB",
+"{ 	c #918DFB",
+"] 	c #A09DF8",
+"^ 	c #ADAEC5",
+"/ 	c #D2D3DF",
+"( 	c #FFFFFF",
+"_ 	c #928EF8",
+": 	c #8985FC",
+"< 	c #8F8BFB",
+"[ 	c #9490FB",
+"} 	c #B2AEFB",
+"| 	c #C1BDFC",
+"1 	c #C0BCFC",
+"2 	c #B0ACFB",
+"3 	c #A39FFA",
+"4 	c #9A96FB",
+"5 	c #CBCCDA",
+"6 	c #9FA0BB",
+"7 	c #FCFCFD",
+"8 	c #A19DFA",
+"9 	c #B3AFFB",
+"0 	c #C2BEFB",
+"a 	c #CDC9FC",
+"b 	c #CECAFC",
+"c 	c #CAC6FC",
+"d 	c #C4C0FC",
+"e 	c #BBB7FC",
+"f 	c #F9F9FB",
+"g 	c #9495B3",
+"h 	c #B5B6CB",
+"i 	c #ECECFC",
+"j 	c #B1ADFB",
+"k 	c #ADA9FA",
+"l 	c #B2AEF9",
+"m 	c #AEAAF8",
+"n 	c #C1BDF9",
+"o 	c #D1CDFA",
+"p 	c #D6D2FB",
+"q 	c #D3CFFB",
+"r 	c #C6C2FC",
+"s 	c #938FFB",
+"t 	c #B3B3C9",
+"u 	c #BFC0D2",
+"v 	c #9996F8",
+"w 	c #A5A1F9",
+"x 	c #ADA9F8",
+"y 	c #B3AFF7",
+"z 	c #B8B4F7",
+"A 	c #B9B5F7",
+"B 	c #D0CDFA",
+"C 	c #A4A0FB",
+"D 	c #9895F8",
+"E 	c #C3C3D4",
+"F 	c #A0A1BC",
+"G 	c #8581FA",
+"H 	c #9894FA",
+"I 	c #A19DF9",
+"J 	c #AAA6F8",
+"K 	c #9B98CD",
+"L 	c #2E2D3A",
+"M 	c #000000",
+"N 	c #CDCBF9",
+"O 	c #C9C5FB",
+"P 	c #B9B5FC",
+"Q 	c #928EFB",
+"R 	c #8481FA",
+"S 	c #DFE0E8",
+"T 	c #9A96FA",
+"U 	c #A4A0F9",
+"V 	c #515154",
+"W 	c #CAC6FA",
+"X 	c #C8C4FB",
+"Y 	c #B6B2FB",
+"Z 	c #A09CFB",
+"` 	c #8F90B0",
+" .	c #B4B5CA",
+"..	c #A8A9C1",
+"+.	c #C7C7D7",
+"@.	c #9B97FA",
+"#.	c #AFABF8",
+"$.	c #AFABF9",
+"%.	c #9B97FB",
+"&.	c #9D99FB",
+"*.	c #A4A5BF",
+"=.	c #A8A4FB",
+"-.	c #9697B5",
+";.	c #BCBCCF",
+">.	c #9D99FA",
+",.	c #DADAE4",
+"'.	c #A0A1BB",
+").	c #D4D4E0",
+"!.	c #9596B4",
+"~.	c #9793FA",
+"{.	c #9E9AFA",
+"].	c #B8B9CD",
+"^.	c #9091B0",
+"/.	c #E9E9EF",
+"(.	c #F1F1F5",
+"_.	c #B0B0C7",
+":.	c #B5B6CA",
+"<.	c #8682F2",
+"[.	c #9292C2",
+"}.	c #9595B5",
+"|.	c #9090CB",
+"1.	c #8988CF",
+"2.	c #8A88D0",
+"3.	c #8B8ACD",
+"4.	c #8D8DB7",
+"5.	c #8D8EAF",
+"                                                                                                ",
+"                                                                                                ",
+"                                                                                                ",
+"                                                                                                ",
+"                                                                                                ",
+"                                                                                                ",
+"                                                                                                ",
+"                                                                                                ",
+"                                                                                                ",
+"                                                                                                ",
+"                                                                                                ",
+"                                                                                                ",
+"                                                                                                ",
+"                                                                                                ",
+"                                                                                                ",
+"                                                                                                ",
+"                                . + @ @ @ @ @ @ @ @ @                                           ",
+"                            + @ @ # $ % & * & = - @ @ @ @                                       ",
+"                        @ @ ; > , ' ) ! ~ { ~ ! ) & ] ^ @ @ @                                   ",
+"                    @ @ @ / ( _ : < [ } | 1 2 3 4 < : _ ( 5 @ @                                 ",
+"                  @ @ 6 7 ( ] : ~ 8 9 0 a b a c d e ~ : ] ( f g @ @                             ",
+"                @ @ h ( ( i ' < j k l m n o p q b r j s & i ( ( t @ @                           ",
+"              @ @ u ( ( ( v ) [ 3 w x y z A z B p a d C ) D ( ( ( E @ @                         ",
+"              @ F ( ( ( ( G ! H I J y K L M L K N q O P Q R ( ( ( ( S @ @                       ",
+"            @ @ ( ( ( ( ( ' ~ T U m z L M V V L z W X Y Z & ( ( ( ( ( 7 ` @  .                  ",
+"          ..@ +.( ( ( ( ( * { @.w #.A M V M V M A #.$.} %.* ( ( ( ( ( ( 7 ; @ g                 ",
+"          @ g ( ( ( ( ( ( ' ~ T U m z L M V M L z m U 2 &.& ( ( ( ( ( ( ( ( *.@ @ @             ",
+"        @ @ 7 ( ( ( ( ( ( G ! H I J y K L M L K y J I =.Q R ( ( ( ( ( ( ( ( 7 -.@ @             ",
+"        @ @ @ ;.( ( ( ( ( v ) [ >.w x y z A z y x w >.[ ) D ( ( ( ( ( ( ,.'.@ @ @               ",
+"          ).!.@ g 7 ( ( ( i ' < ~.{.w J m #.m J w {.~.< & i ( ( ( 7 6 ` @ @ !.                  ",
+"              ].@ ^./.( ( ( ] : ~ ~.>.I U w U I >.~.~ : ] ( ( (.; @ @ `                         ",
+"                  @ # ;.7 ( ( _ : < [ H T @.T H [ < : _ ( (._.@ @                               ",
+"                    @ @ @ + :.f ] ' ) ! ~ { ~ ! ) <.[.# @ @ @ @                                 ",
+"                        @ @ @ @ # }.|.1.2.3.4.5.@ @ @ @                                         ",
+"                                @ @ @ @ @ @ @ @                                                 ",
+"                                                                                                ",
+"                                                                                                ",
+"                                                                                                ",
+"                                                                                                ",
+"                                                                                                ",
+"                                                                                                ",
+"                                                                                                ",
+"                                                                                                ",
+"                                                                                                ",
+"                                                                                                ",
+"                                                                                                ",
+"                                                                                                ",
+"                                                                                                "};
