@@ -1,3 +1,7 @@
+2001-11-08  Wolfgang Sourdeau  <wolfgang@contre.com>
+
+	* src/prefs.c: New file to manage user's preferences.
+
 2001-10-29  Wolfgang Sourdeau  <wolfgang@iscream.ca>
 
 	* src/ps_print.c (create_temp_print_file): create file with umask=077.
